--- a/double_page_01.tex
+++ b/double_page_01.tex
@@ -46,11 +46,8 @@
 
         \item Designed and developed an app feature that scans and recognizes
         simple logos using OCR and machine learning techniques. The app also performs pre-processing processing tasks like segmentation, circle detection etc. 
-        % \item Designed
-        %and implemented a speech analysis application in python
-    %using Google's Web Speech API with an accuracy of 70\%. The application takes user's speech and
-    %compute statistics like number of words, speed, repeated words, number of unintelligent words etc.  
-    \end{itemize}
+
+\end{itemize}
 
    \begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
@@ -64,7 +61,8 @@ uses ideas from PCA based eigenfaces used for face recognition.  The Head Tracki
 \item Conducted courses and designed  lab experiments/assignments for courses
 like DSP, Image Processing and Random Signal Analysis. These experiments included simulation of random processes,
  implementation of image processing algorithms like filtering, image transforms etc.  
-\item Introduced the use of OpenCV for Image Processing laboratory. Prior to this Matlab was used for image processing laboratory. I promoted and introduced OpenCV for image processing experiments as it is more used in actual applications. 
+
+\item Introduced the use of OpenCV for Image Processing laboratory. Prior to this Matlab was used for image processing laboratory. I promoted and introduced OpenCV for image processing experiments. 
 \end{itemize}
 
    \begin{tabbing}%
@@ -73,13 +71,11 @@ like DSP, Image Processing and Random Signal Analysis. These experiments include
                 IIT-B\>    \>Powai, Mumbai.
    \end{tabbing}
  \begin{itemize}
-\item Multiple low resolution images of the same scene are fused to super-resolve or obtain
-high resolution image of the scene. This technique is called Super-Resolution. The method outperforms simple interpolation techniques in terms of  artifact removal, noise and PSNR. 
-It gives higher quality high resolution image which are better than the popular bi-cubic or other interpolation techniques. 
 
- \item This method is also then used for
-converting SDTV video to HDTV video. Frames in SDTV images are of lower resolution and a different aspect ratio than HDTV videos. Super-resolution was used for this conversion and the results were found to be better than simple resizing or interpolation. 
-\item  Used optical-flow for  the SR-technique to  free the process  from the traditional global motion assumption. This enabled to do a point based-registration  and discard a global translation/motion assumption. The method allows to register images that does not follow the global motion model. 
+\item Multiple low resolution images of the same scene are fused to super-resolve or obtain
+high resolution image of the scene. This technique is called Super-Resolution. The method outperforms simple interpolation techniques in terms of  artifact removal, noise and PSNR. When applied to SDTV video to HDTV conversion, results were found to be better than simple resizing or interpolation. 
+
+\item  Used optical-flow for  the SR-technique to  free the process  from the traditional global motion assumption. This enabled to do a point based-registration  and discard a global translation/motion assumption.
 \end{itemize}
 
 \section{EDUCATION}          
