add months to date, add key-areas

--- a/double_page_01.tex
+++ b/double_page_01.tex
@@ -29,7 +29,7 @@
    \begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
    
-    {\bf Image Processing Consultant}     \> \> 2014-Present\\
+    {\bf Image Processing Consultant}     \> \> Sep 2014 - Jan 2016\\
         Binaryveda Software Ltd. \>  \>CBD-Belapur, Navi Mumbai. 
    \end{tabbing}      % suppress blank line after tabbing
 
@@ -51,7 +51,7 @@
 
    \begin{tabbing}
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
-    {\bf Assistant Professor} \> \>2012-  2014\\
+    {\bf Assistant Professor} \> \>July 2012 - Aug 2014\\
                      RGIT.\>     \>Andheri, Mumbai.
    \end{tabbing}
    \begin{itemize}
@@ -67,7 +67,7 @@ like DSP, Image Processing and Random Signal Analysis. These experiments include
 
    \begin{tabbing}%
    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions          
-   {\bf Research Scholar}  \>  \> 2008-2012\\
+   {\bf Research Scholar}  \>  \> July 2008 - May 2012\\
                 IIT-B\>    \>Powai, Mumbai.
    \end{tabbing}
  \begin{itemize}
@@ -87,8 +87,8 @@ high resolution image of the scene. This technique is called Super-Resolution. T
 
 \section{TECHNICAL SKILLS}          
 \begin{description}
-\item [Programming      :]  C/C++, Python, Java, Linux Scripting 
-\item [Tools            :] Matlab, Octave, OpenCV, Eclipse/Android Studio
+\item [Programming      :] Python, C/C++, Linux Scripting 
+\item [Key-Areas        :] Machine-Learning/AI, IOT, Computer Vision. 
 \end{description}
 
 
